# Funcode---Hero-Book

./: .gitignore  LICENSE  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  requirements_gpu.txt  requirements_v1_gpu.txt  requirements_v2.txt
data/plots/: .gitkeep.gitattributes  graph.html  graph_5.html  graph_tst.html  streamlit_graph.html
notebooks/: Hero Book - v1.ipynb  Hero Book - v2 dev.ipynb  Hero Book 2 - dev.ipynb
notebooks/.ipynb_checkpoints/: Hero Book-checkpoint.ipynb
src/herobook/: episode.py  graph.py  parsing.py
src/herobook/parse/: __init__.py  from_doc.py  from_text.py
streamlit/: app - Copie.py  app.bat  app.py
