[tool.poetry]
name = "hero book"
version = "0.1.0"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"
packages = [{include = "herobook", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.11"
networkx = "^3.3"
pyvis = "^0.3.2"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
